fixed scrollbar

--- a/src/components/TripScrollbar/TripScrollbar.scss
+++ b/src/components/TripScrollbar/TripScrollbar.scss
@@ -2,33 +2,30 @@
     display: none;
   }
   
-  // #left-arrow,
-  // #right-arrow {
-  //   position: absolute;
-  //   width: 40px;
-  //   height: 40px;
-  //   top: 50%;
-  //   transform: translateY(-50%);
-  //   background-color: transparent;
-  //   border: none;
-  //   outline: none;
-  // }
-  
   /* Position the arrows */
   #trip-shortcuts {
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
+
+
+    #left-arrow,
+    #right-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 50;
+    }
   
     #left-arrow {
       left: 5px;
-      align-self: center;
+      top: calc(50% - 24px);
     }
   
     #right-arrow {
       right: 5px;
-      align-self: center;
-  
+      top: calc(50% - 24px);
     }
   }
   
